Fix footer spacing.

--- a/sass/footer.sass
+++ b/sass/footer.sass
@@ -23,7 +23,6 @@ footer
 	width: 100%
 	
 	p
-		margin-top: 2em
 		color: white
 		font-size: 1.5em
 		font-weight: 300
